libs/pavex_cli/tests/ui_tests/tuple_input_parameters_are_not_handled_by_constructors/expectations/stderr.txt
Error: 
  × One of the input parameters for `app::stream_file` has a type that I
  │ cannot handle.
    ╭─[src/lib.rs:10:1]
 10 │     let mut bp = AppBlueprint::new();
 11 │     bp.constructor(f!(crate::stream_file), Lifecycle::Singleton);
    ·                    ───────────┬──────────
    ·                               ╰── The constructor was registered here
 12 │     bp
    ╰────

Error: 
  × 
   ╭─[src/lib.rs:4:1]
 4 │ 
 5 │ pub fn stream_file(input: (usize, isize)) -> Logger {
   ·                           ───────┬──────
   ·                                  ╰── I do not know how handle this parameter
 6 │     todo!()
   ╰────